--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
 <body>
     <div class="container" id="home">
-    <div class="toTop"><a href=#home><i class="far fa-arrow-alt-circle-up"></i></a></div>
+        <div class="toTop">
+            <a href=#home>
+                <i class="far fa-arrow-alt-circle-up" aria-hidden="true" focusable="false"></i>
+                <span class="visually-hidden">Go Back to Main Page</span>
+            </a>
+        </div>
         <header class="header">
             <h1 class="header-logo" tabindex="0">
                 <a href=#home>vBS</a>
@@ -41,12 +46,10 @@
             <h2 class="hero-header">I AM V</h2>
             <p class="hero-content"></p>
             <div class="hero-buttons">
-                <button class="hero-button" type="button" >Send me a message</button>
-                <button class="hero-button">Look at my works</button>
-            </div>
+                <a href="mailto:vieraboschkova@gmail.com?subject=Mail from Portfolio Page" class="hero-button">Send me a message</a>
+                <a href="https://github.com/vieraboschkova" target="_blank" rel="noopener noreferrer" class="hero-button">Look at my works</a>
+            </p>
         </section>
-
-        
 
         <main>
             <section class="about" id="about">
@@ -197,7 +200,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button class="hero-button footer-button" type="submit" value="Submit"><i class="fas fa-paper-plane form-icon"></i><span>Send!</span></button>
+                        <button class="hero-button footer-button" type="submit" value="Submit">
+                            <i class="fas fa-paper-plane form-icon" aria-hidden="true" focusable="false"></i>
+                            <span>Send!</span>
+                        </button>
                     </div>
                 </form>
             </div>
@@ -207,19 +213,34 @@
                     </p>
                     <div class="media-icons row">
                         <p class="media-icon">
-                            <a href="https://www.facebook.com/jagringa"><i class="fab fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/jagringa" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook-f" aria-hidden="true" focusable="false"></i>
+                                <span class="visually-hidden">Open "Ja Gringa" Facebook Page</span>
+                            </a>
                         </p>
                         <p class="media-icon">
-                            <a href="http://jagringa.blogspot.com/"><i class="fab fa-blogger-b"></i></a>
+                            <a href="http://jagringa.blogspot.com/" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-blogger-b" aria-hidden="true" focusable="false"></i>
+                                <span class="visually-hidden">Open "Ja Gringa" blog</span>
+                            </a>
                         </p>
                         <p class="media-icon">
-                            <a href="https://www.linkedin.com/in/boszkoweronika/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/boszkoweronika/" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-linkedin-in" aria-hidden="true" focusable="false"></i>
+                                <span class="visually-hidden">Open My LinkedIn Page</span>
+                            </a>
                         </p>
                         <p class="media-icon">
-                            <a href="https://github.com/vieraboschkova"><i class="fab fa-github-alt"></i></a>
+                            <a href="https://github.com/vieraboschkova" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github-alt" aria-hidden="true" focusable="false"></i>
+                                <span class="visually-hidden">Open my github page</span>
+                            </a>
                         </p>
                         <p class="media-icon">
-                            <a href="http://corona-feed.com/pt/brasil"><i class="fas fa-virus"></i></i></a>
+                            <a href="http://corona-feed.com/pt/brasil" target="_blank" rel="noopener noreferrer">
+                                <i class="fas fa-virus" aria-hidden="true" focusable="false"></i>
+                                <span class="visually-hidden">Open a project I participated in about CoronaVirus</span>
+                            </a>
                         </p>
 
                     </div>
@@ -227,11 +248,9 @@
                         <p>vBS</p>
                         <p>ul. Frontowa</p>
                         <p>Gdańsk, Pomorskie</p>
-                        <p>+48 000 000 000</p>
-                        <p><a href="mailto:vieraboschkova@gmail.com">Send me an email</a></p>
-    
+                        <p><a href="tel:+48000000000">+48 000 000 000</a></p>
+                        <p><a href="mailto:vieraboschkova@gmail.com?subject=Mail from Portfolio Page">Send me an email</a></p>
                     </div>
-
             </div>
         </footer>
         <footer class="copyrights">Copyrights © 2020  vBS</footer>
